openturns/1.17/_sources/auto_data_analysis/estimate_dependency_and_copulas/plot_estimate_copula.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/estimate_dependency_and_copulas/plot_estimate_copula.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py:


Fit a parametric copula
=======================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

In this example we are going to estimate the parameters of a gaussian copula from a sample.

.. GENERATED FROM PYTHON SOURCE LINES 10-16

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 17-18

Create data

.. GENERATED FROM PYTHON SOURCE LINES 18-23

.. code-block:: default

    R = ot.CorrelationMatrix(2)
    R[1, 0] = 0.4
    copula = ot.NormalCopula(R)
    sample = copula.getSample(500)








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Estimate a normal copula

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: default

    distribution = ot.NormalCopulaFactory().build(sample)
    print(distribution)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    NormalCopula(R = [[ 1        0.427237 ]
     [ 0.427237 1        ]])




.. GENERATED FROM PYTHON SOURCE LINES 29-30

The estimated parameters

.. GENERATED FROM PYTHON SOURCE LINES 30-32

.. code-block:: default

    distribution.getParameter()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[0.427237]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 33-34

Draw fitted distribution

.. GENERATED FROM PYTHON SOURCE LINES 34-37

.. code-block:: default

    graph = distribution.drawPDF()
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/sphx_glr_plot_estimate_copula_001.png
    :alt: [X0,X1] iso-PDF
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.117 seconds)


.. _sphx_glr_download_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_estimate_copula.py <plot_estimate_copula.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_estimate_copula.ipynb <plot_estimate_copula.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
