openturns/1.25/_sources/auto_data_analysis/estimate_dependency_and_copulas/plot_estimate_copula.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/estimate_dependency_and_copulas/plot_estimate_copula.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py:


Fit a parametric copula
=======================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

In this example we are going to estimate the parameters of a Gaussian copula from a sample.

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: Python

    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pyplot as plt









.. GENERATED FROM PYTHON SOURCE LINES 16-17

Create data

.. GENERATED FROM PYTHON SOURCE LINES 17-22

.. code-block:: Python

    R = ot.CorrelationMatrix(2)
    R[1, 0] = 0.4
    copula = ot.NormalCopula(R)
    sample = copula.getSample(500)








.. GENERATED FROM PYTHON SOURCE LINES 23-24

Estimate a Normal copula

.. GENERATED FROM PYTHON SOURCE LINES 24-27

.. code-block:: Python

    distribution = ot.NormalCopulaFactory().build(sample)
    print(distribution)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NormalCopula(R = [[ 1        0.428625 ]
     [ 0.428625 1        ]])




.. GENERATED FROM PYTHON SOURCE LINES 28-29

The estimated parameters

.. GENERATED FROM PYTHON SOURCE LINES 29-31

.. code-block:: Python

    distribution.getParameter()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=Point name=Unnamed dimension=1 values=[0.428625]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 32-33

Draw fitted distribution

.. GENERATED FROM PYTHON SOURCE LINES 33-36

.. code-block:: Python

    graph = distribution.drawPDF()
    view = viewer.View(graph)
    plt.show()



.. image-sg:: /auto_data_analysis/estimate_dependency_and_copulas/images/sphx_glr_plot_estimate_copula_001.svg
   :alt: X0 iso-PDF
   :srcset: /auto_data_analysis/estimate_dependency_and_copulas/images/sphx_glr_plot_estimate_copula_001.svg
   :class: sphx-glr-single-img






.. _sphx_glr_download_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_estimate_copula.ipynb <plot_estimate_copula.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_estimate_copula.py <plot_estimate_copula.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_estimate_copula.zip <plot_estimate_copula.zip>`
